fixed card wrap on mobile

--- a/css/card.css
+++ b/css/card.css
@@ -97,8 +97,9 @@
     .card {
         margin: 0;
     }
-
+    
     .wrapper {
+        grid-template-columns: 1fr;
         grid-auto-flow: row;
     }
 }
